Fix Login scss button background color bug on Safari

--- a/src/components/shared/LoginBox/LoginBox.scss
+++ b/src/components/shared/LoginBox/LoginBox.scss
@@ -134,6 +134,7 @@
 				letter-spacing: 0.6px;
 				padding: 3px 5px;
 				cursor: pointer;
+				background-color: $color-white;
 				transition-duration: 0.25s;
 			}
 
